--- a/users/ethTransfer.html
+++ b/users/ethTransfer.html
@@ -89,6 +89,7 @@
 			// 获取转账手续费
 			function whetherSuccess() {
 				web3.eth.getGasPrice().then(function (result){
+					alert(result)
 					$("#routine").val(result);
 				}).catch(function () {
 					mui.toast('链接不到笛卡尔融云链网络');
