--- a/users/ethTransfer.html
+++ b/users/ethTransfer.html
@@ -57,7 +57,7 @@
 					<div class="detail">
 						<div style="position: relative;">
 							<input style="padding-right: 50px;" id="routine" value="25000" type="number" class="mui-input-clear" value="0">
-							<span>聪</span>
+							<span>wei</span>
 						</div>
 					</div>
 				</div>
