--- a/users/tradeRecord.html
+++ b/users/tradeRecord.html
@@ -113,7 +113,7 @@
 					}
 					loadTradeLisy();
 				} else if (targetId == '2') {
-					
+					// ethTradeList eth交易列表
 				}
 				// 跳转到详情
 			    $("#tadeMain").on("click", ".each_trade", function() {
