--- a/users/tradeRecord.html
+++ b/users/tradeRecord.html
@@ -114,6 +114,7 @@
 					}
 					loadTradeLisy('DCAR');
 				} else if (targetId == '2') {
+					address = self.address; // all/each
 					$('.loading_box').hide();
 					// ethTradeList eth交易列表
 					ethTradeList = store.get("ethTradeList");
