--- a/users/oreManage.html
+++ b/users/oreManage.html
@@ -146,7 +146,7 @@
 							</h5>
 							<p class="status stay">
 								<img src="../img/redPic.png" alt="" />
-								关机
+								离线
 							</p>
 						</div>
 						<div class="miner_content_alert">
@@ -172,7 +172,7 @@
 							</h5>
 							<p class="status stay">
 								<img src="../img/redPic.png" alt="" />
-								关机
+								离线
 							</p>
 						</div>
 						<div class="miner_content_alert">
@@ -197,7 +197,7 @@
 							</h5>
 							<p class="status stay">
 								<img src="../img/redPic.png" alt="" />
-								关机
+								离线
 							</p>
 						</div>
 						<div class="miner_content_alert">
@@ -222,7 +222,7 @@
 							</h5>
 							<p class="status stay">
 								<img src="../img/redPic.png" alt="" />
-								关机
+								离线
 							</p>
 						</div>
 						<div class="miner_content_alert">
@@ -242,10 +242,10 @@
 				<button class="loading">加载更多</button>
 			</div>
 		</div>
-		<!--开机关机弹框-->
+		<!--开机离线弹框-->
 		<div class="mui-popover alert_box">
 			<p class="alert_title">提示</p>
-			<div class="alert_body" id="close">确定要关机吗？确定之后矿机将停止挖矿</div>
+			<div class="alert_body" id="close">确定要离线吗？确定之后矿机将停止挖矿</div>
 			<div class="alert_body" id="delete">
 				<div style="margin:0 25px;">确定要删除矿机吗？删除后数据将清零</div>
 				<!--<div style="margin:8px 25px 0;">你可以选择数据是否清零</div>
@@ -449,7 +449,7 @@
 					$('#open').show();
 					$('#deleteWallet').hide();
 				});
-				// 关机
+				// 离线
 			    $("#cart_list").on("click", ".shut_down", function() {
 					mui('.alert_box').popover('show');
 					alertState = 'close';
@@ -688,7 +688,7 @@
 											'</h5>'+
 											'<p class="status stay">'+
 												'<img src="../img/redPic.png" alt="" />' +
-												'关机'+
+												'离线'+
 											'</p>'+
 										'</div>'+
 										'<div class="miner_content_alert">'+
@@ -715,7 +715,7 @@
 										'</h5>' +
 										'<p class="status stay">' +
 											'< img src="../img/redPic.png" alt="" />' +
-											'关机' +
+											'离线' +
 										'</p>' +
 									'</div>' +
 									'<div class="miner_content_alert">' +
@@ -742,7 +742,7 @@
 										'</h5>' +
 										'<p class="status stay">'+
 											'<img src="../img/redPic.png" alt="" />'+
-											'关机'+
+											'离线'+
 										'</p>'+
 									'</div>'+
 									'<div class="miner_content_alert">'+
@@ -829,7 +829,7 @@
 											'</h5>' +
 											'<p class="status stay">'+
 												'<img src="../img/redPic.png" alt="" />'+
-												'关机'+
+												'离线'+
 											'</p>'+
 										'</div>'+
 										'<div class="miner_content_alert">' +
@@ -969,7 +969,7 @@
 													'</h5>'+
 													'<p class="status stay">'+
 														'<img src="../img/redPic.png" alt="" />' +
-														'关机'+
+														'离线'+
 													'</p>'+
 												'</div>'+
 												'<div class="miner_content_alert">'+
@@ -996,7 +996,7 @@
 												'</h5>' +
 												'<p class="status stay">' +
 													'< img src="../img/redPic.png" alt="" />' +
-													'关机' +
+													'离线' +
 												'</p>' +
 											'</div>' +
 											'<div class="miner_content_alert">' +
@@ -1023,7 +1023,7 @@
 												'</h5>' +
 												'<p class="status stay">'+
 													'<img src="../img/redPic.png" alt="" />'+
-													'关机'+
+													'离线'+
 												'</p>'+
 											'</div>'+
 											'<div class="miner_content_alert">'+
@@ -1110,7 +1110,7 @@
 													'</h5>' +
 													'<p class="status stay">'+
 														'<img src="../img/redPic.png" alt="" />'+
-														'关机'+
+														'离线'+
 													'</p>'+
 												'</div>'+
 												'<div class="miner_content_alert">' +
